Bug 530820 - Move away of deprecated Number constructors
And fix other warnings like generification, lambda conversion and
non-javadoc see comments.

Change-Id: I8aef73042851d19a2db8aca71a76d511220d3e0a
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>