@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2015 IBM Corporation and others.
+ * Copyright (c) 2007, 2018 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -22,8 +22,8 @@ import org.eclipse.core.internal.databinding.conversion.StringToNumberParser;
  * @since 1.0
  */
 public class NumberToDoubleValidator extends NumberToNumberValidator {
-	private static final Double MIN = new Double(Double.MIN_VALUE);
-	private static final Double MAX = new Double(Double.MAX_VALUE);
+	private static final Double MIN = Double.valueOf(Double.MIN_VALUE);
+	private static final Double MAX = Double.valueOf(Double.MAX_VALUE);
 
 	/**
 	 * @param converter
