@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2015 IBM Corporation and others.
+ * Copyright (c) 2007, 2018 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -22,8 +22,8 @@ import org.eclipse.core.internal.databinding.conversion.StringToNumberParser;
  * @since 1.0
  */
 public class NumberToFloatValidator extends NumberToNumberValidator {
-	private static final Float MIN = new Float(Float.MIN_VALUE);
-	private static final Float MAX = new Float(Float.MAX_VALUE);
+	private static final Float MIN = Float.valueOf(Float.MIN_VALUE);
+	private static final Float MAX = Float.valueOf(Float.MAX_VALUE);
 
 	/**
 	 * @param converter
