@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2015 IBM Corporation and others.
+ * Copyright (c) 2007, 2018 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -17,8 +17,8 @@ import org.eclipse.core.internal.databinding.conversion.StringToNumberParser;
  * @since 1.0
  */
 public class StringToShortValidator extends AbstractStringToNumberValidator {
-	private static final Short MIN = new Short(Short.MIN_VALUE);
-	private static final Short MAX = new Short(Short.MAX_VALUE);
+	private static final Short MIN = Short.valueOf(Short.MIN_VALUE);
+	private static final Short MAX = Short.valueOf(Short.MAX_VALUE);
 
 	/**
 	 * @param converter
