@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2018 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -85,7 +85,7 @@ public final class ConfigurationElementMemento implements IMemento {
 
         if (string != null) {
 			try {
-                return new Float(string);
+				return Float.valueOf(string);
             } catch (NumberFormatException eNumberFormat) {
             }
 		}
